--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,7 @@
 export(buildReqFilter)
 export(buildReqLimits)
 export(hello)
+export(hgroup.enum)
+export(theme_dvt)
+importFrom(futile.logger,flog.info)
+importFrom(hrbrthemes,theme_ipsum_rc)
