добавил инициализация Cairo под Linux

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(buildReqFilter)
 export(buildReqLimits)
 export(hello)
 export(hgroup.enum)
+export(initRCfontInCairo)
 export(theme_dvt)
 importFrom(futile.logger,flog.info)
 importFrom(hrbrthemes,theme_ipsum_rc)
