Перевел списки на data.frame в генераторе запросов

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,11 @@ export(buildReqFilter)
 export(buildReqLimits)
 export(buildReqLimitsExt)
 export(buildReqLimitsExt2)
+export(buildReqLimitsExt3)
 export(hello)
 export(hgroup.enum)
 export(initRCfontInCairo)
 export(theme_dvt)
+importFrom(assertr,has_all_names)
+importFrom(assertr,verify)
 importFrom(magrittr,"%>%")
