--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dvtdspack
 Type: Package
 Title: Set of Functions Used in DVT Shiny App
-Version: 0.1.2
+Version: 0.1.3
 Authors@R: person("Ilya", "Shutov", email="ilya.shutov@media-tel.ru", role=c("aut", "cre"))
 Maintainer: The package maintainer <ilya.shutov@media-tel.ru>
 Description: More about what it does (maybe more than one line)
@@ -11,12 +11,13 @@ Encoding: UTF-8
 LazyData: true
 URL: https://gitlab.com/ishutov/dvtdspack
 RoxygenNote: 6.0.1
-Imports: 
+Imports:
     checkmate,
     stringi,
     purrr,
     lubridate,
     hrbrthemes,
     magrittr
-Suggests: 
-    testthat
+Suggests:
+    testthat,
+    covr
