[fix] сделал экранирование параметров и значений в функциях формирования SQL запросов

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,5 @@ export(hello)
 export(hgroup.enum)
 export(initRCfontInCairo)
 export(theme_dvt)
-importFrom(assertr,has_all_names)
-importFrom(assertr,verify)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,"%T>%")
