--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dvtdspack
 Type: Package
 Title: Set of Functions Used in DVT Shiny App
-Version: 0.1.3
+Version: 0.1.4
 Authors@R: person("Ilya", "Shutov", email="ilya.shutov@media-tel.ru", role=c("aut", "cre"))
 Maintainer: The package maintainer <ilya.shutov@media-tel.ru>
 Description: More about what it does (maybe more than one line)
@@ -17,7 +17,13 @@ Imports:
     purrr,
     lubridate,
     hrbrthemes,
-    magrittr
+    magrittr,
+    Cairo,
+    dbplyr,
+    dplyr,
+    glue,
+    rlang,
+    tibble
 Suggests:
     testthat,
     covr
